-hunger
- introducing hunger
- owner check
- owner check in ssp allways true
- different time delays settable from config file
- change owner gui